--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h6 {
   vertical-align: baseline;
 }
 
-a {  
+a {
   text-decoration: none;
   color: #969899;
 }
@@ -43,6 +43,46 @@ body {
   color: #969899;
   opacity: 0.5;
   text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.password {
+  display: flex;
+}
+
+.show-password {
+  padding: 0;
+  border: none;
+  width: 744px;
+  height: 84px;
+  border-radius: 29px;
+}
+
+.button {
+  padding: 0;
+  border: none;
+  width: 84px;
+  height: 84px;
+  background: rgba(150, 152, 153, 0.5);
+  box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 29px;
+  margin: 0 0 0 -84px;
+  cursor: pointer;
+}
+
+.properties {  
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 29px;
 }
 
 .footer-text {
