--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@
 }
 
 @font-face {
+  font-family: 'Inter-ExtraLight';
+  src: url('./src/fonts/Inter/static/Inter-ExtraLight.ttf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Inter-Light';
+  src: url('./src/fonts/Inter/static/Inter-Light.ttf') format('opentype');
+}
+
+@font-face {
   font-family: 'Inter-SemiBold';
   src: url('./src/fonts/Inter/static/Inter-SemiBold.ttf') format('opentype');
 }
@@ -13,7 +23,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   margin: 0;
   padding: 0;
   border: 0;
@@ -36,13 +47,90 @@ body {
   background-color: #eceff1;
 }
 
+/* Стилизация чекбоксов отсюда - https://habr.com/ru/post/489476/ */
+
+input[type='checkbox']:checked,
+input[type='checkbox']:not(:checked) {
+  position: absolute;
+  left: -9999px;
+}
+
+input[type='checkbox']:checked + label,
+input[type='checkbox']:not(:checked) + label {
+  display: inline-block;
+  position: relative;
+  padding-left: 28px;
+  line-height: 20px;
+  cursor: pointer;
+}
+
+input[type='checkbox']:checked + label:before,
+input[type='checkbox']:not(:checked) + label:before {
+  content: '';
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 42px;
+  height: 42px;
+  background: rgba(150, 152, 153, 0.5);
+  box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+}
+
+input[type='checkbox']:checked + label:after,
+input[type='checkbox']:not(:checked) + label:after {
+  content: '';
+  position: absolute;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+input[type='checkbox']:checked + label:after,
+input[type='checkbox']:not(:checked) + label:after {
+  left: 5px;
+  top: 5px;
+  width: 30px;
+  height: 30px;
+  border-radius: 11px;
+  border: 1px solid #ffffff;
+  /* background-color: #ffffff; */
+}
+
+input[type='checkbox']:not(:checked) + label:after {
+  opacity: 0;
+}
+
+input[type='checkbox']:checked + label:after {
+  opacity: 1;
+}
+
+input {
+  outline: none;
+}
+
 .main-title {
   font-family: Inter-Regular;
-  font-size: 48px;
-  line-height: 100%;
+  font-size: 64px;
   color: #969899;
   opacity: 0.5;
   text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+  margin: 96px 0 0 0;
+  text-align: center;
+}
+
+.main-title-text {
+  font-family: Inter-Regular;
+  font-size: 16px;  
+  color: #969899;
+  opacity: 0.5;
+  text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.main-title-link {
+  font-family: Inter-SemiBold;
 }
 
 .main-content {
@@ -54,45 +142,98 @@ body {
 
 .password {
   display: flex;
+  margin: 128px 0 64px 0;
 }
 
 .show-password {
+  width: 50vw;
   padding: 0;
   border: none;
-  width: 744px;
-  height: 84px;
   border-radius: 29px;
+  font-family: Inter-Regular;
+  font-size: 64px;
+  text-align: center;
+  color: #969899;
+  opacity: 0.5;
+  text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
 }
 
 .button {
+  position: relative;
+  z-index: 1;
   padding: 0;
+  margin: 0 0 0 -84px;
   border: none;
   width: 84px;
   height: 84px;
   background: rgba(150, 152, 153, 0.5);
   box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.1);
   border-radius: 29px;
-  margin: 0 0 0 -84px;
   cursor: pointer;
 }
 
-.properties {  
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 29px;
+.button-image {
+  width: 30px;
 }
 
-.footer-text {
-  font-family: Inter-Regular;
-  font-size: 12px;
-  line-height: 100%;
+.properties {
+  background-color: #ffffff;
+  border-radius: 21px;
+  padding: 16px 16px 24px 16px;
+  margin: 0 0 96px 0;
+}
+
+.property {
+  margin: 11px 0 0 0;
+}
+
+.property-length {
+  display: flex;
+}
+
+.prop-length {
+  width: 42px;
+  height: 42px;
+  padding: 0;
+  margin: 0 0 -7px 0;
+  border: none;
+  background: rgba(150, 152, 153, 0.5);
+  box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  font-family: Inter-ExtraLight;
+  font-size: 28px;
   text-align: center;
+  color: #ffffff;
+}
+
+.property-name-length {
+  font-family: Inter-Light;
+  font-weight: 500;
+  font-size: 24px;
+  color: rgba(150, 152, 153, 0.5);
+  text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+  margin: 7px 0 0 16px;
+}
+
+.property-name {
+  font-family: Inter-Light;
+  font-weight: 500;
+  font-size: 24px;
+  color: rgba(150, 152, 153, 0.5);
+  text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+  margin: 1px 0 0 57px;
+}
+
+.footer-text {  
+  position: relative;
+  right: 64px;
+  font-family: Inter-Regular;
+  font-size: 16px;
+  text-align: right;
   color: #969899;
   opacity: 0.5;
   text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+  margin: 0 0 32px 0;
 }
 
 .footer-link {
