--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
   src: url('./src/fonts/Inter/static/Inter-SemiBold.ttf') format('opentype');
 }
 
+html {
+  font-size: 16px;
+}
+
 h1,
 h2,
 h3,
@@ -112,17 +116,17 @@ input {
 
 .main-title {
   font-family: Inter-Regular;
-  font-size: 64px;
+  font-size: 3.5rem;
   color: #969899;
   opacity: 0.5;
   text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
-  margin: 96px 0 0 0;
+  margin: 3rem 0 0 0;
   text-align: center;
 }
 
 .main-title-text {
   font-family: Inter-Regular;
-  font-size: 16px;  
+  font-size: 0.85rem;
   color: #969899;
   opacity: 0.5;
   text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
@@ -140,40 +144,42 @@ input {
   align-items: center;
 }
 
-.password {
+.password {  
   display: flex;
-  margin: 128px 0 64px 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem 0 1rem 0;
 }
 
 .show-password {
-  width: 50vw;
+  min-width: 85vw;
+  height: 42px;
   padding: 0;
   border: none;
-  border-radius: 29px;
+  border-radius: 15px;
   font-family: Inter-Regular;
-  font-size: 64px;
+  font-size: 1.5rem;
   text-align: center;
   color: #969899;
   opacity: 0.5;
   text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
 }
 
-.button {
-  position: relative;
-  z-index: 1;
+.button {  
   padding: 0;
-  margin: 0 0 0 -84px;
+  margin: 1rem 0 0 0;
   border: none;
-  width: 84px;
-  height: 84px;
+  width: 42px;
+  height: 42px;
   background: rgba(150, 152, 153, 0.5);
   box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.1);
-  border-radius: 29px;
+  border-radius: 15px;
   cursor: pointer;
 }
 
 .button-image {
-  width: 30px;
+  width: 20px;
 }
 
 .properties {
@@ -224,9 +230,9 @@ input {
   margin: 1px 0 0 57px;
 }
 
-.footer-text {  
+.footer-text {
   position: relative;
-  right: 64px;
+  right: 2rem;
   font-family: Inter-Regular;
   font-size: 16px;
   text-align: right;
@@ -238,4 +244,55 @@ input {
 
 .footer-link {
   font-family: Inter-SemiBold;
+}
+
+.hidden {
+  visibility: hidden;
+  display: none;
+}
+
+@media (min-width: 1000px) {
+  .main-title {    
+    font-size: 4rem;
+    margin: 6rem 0 0 0;
+  }
+
+  .main-title-text {    
+    font-size: 1rem;    
+  }
+
+  .password {
+    display: flex;
+    margin: 8rem 0 4rem 0;
+  }
+
+  .show-password {
+    width: 50vw;
+    border-radius: 29px;    
+    font-size: 64px;
+  }
+
+  .button {
+    position: relative;
+    z-index: 1;    
+    margin: 0 0 0 -84px;    
+    width: 84px;
+    height: 84px;    
+    border-radius: 29px;
+  }
+
+  .button-image {
+    width: 30px;
+  }
+
+  .properties {
+    background-color: #ffffff;
+    border-radius: 21px;
+    padding: 16px 16px 24px 16px;
+    margin: 0 0 96px 0;
+  } 
+
+  .footer-text {
+  right: 64px;
+}
 }
