--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,6 @@ input[type='checkbox']:not(:checked) + label:after {
   height: 30px;
   border-radius: 11px;
   border: 1px solid #ffffff;
-  /* background-color: #ffffff; */
 }
 
 input[type='checkbox']:not(:checked) + label:after {
@@ -170,8 +169,7 @@ input {
   font-family: Inter-Regular;
   font-size: 1.9rem;
   text-align: center;
-  color: #969899;
-  opacity: 0.5;
+  color: rgba(150, 152, 153, 0.5);
   text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
 }
 
